bk_ida/gccida/c2/gen_peephole2_1264
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/gen_peephole2_1264/src/insn-emit.c:18355:21: error: use of undeclared identifier 'machine_mode'
v4 = gen_rtx_REG( ( machine_mode)v2, v3); 
                    ^
1 error generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/gen_peephole2_1264/src/obj/insn-emit.o] Error 1
